--- a/web/index.html
+++ b/web/index.html
@@ -36,6 +36,17 @@
 
   <title>pening_repository_ngr</title>
   <link rel="manifest" href="manifest.json">
+
+  <!-- Firebase -->
+  <script src="https://www.gstatic.com/firebasejs/9.22.2/firebase-app.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/9.22.2/firebase-firestore.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/9.22.2/firebase-auth.js"></script>
+
+
+  <script defer src="/__/firebase/10.0.0/firebase-app-compat.js"></script>
+  <script defer src="/__/firebase/10.0.0/firebase-firestore-compat.js"></script>
+  <script defer src="/__/firebase/init.js?useEmulator=true"></script>
+
 </head>
 
 <body>
